tests/errors/invoke-trig-too-often.expect
---STDERR---
error: Cannot prove constraint |T - T+3| > |T+1 - T+6|
  ┌─ tests/errors/invoke-trig-too-often.fil:9:3
  │
3 │     @interface[G, G+5] go_G: 1,
  │     -------------------------- Interface requires event to trigger once in |T+1 - T+6| cycles
  ·
7 │ component Main<T>(@interface[T, T+3] go_T: 1) -> () {
  │                   -------------------------- Provided event may trigger every |T - T+3| cycles
8 │   M := new Mult;
9 │   m0 := invoke M<T+1>;
  │   ^^^^^^^^^^^^^^^^^^^^ Event provided to invoke pulses more often than @interface allows

